# LangViz-studio

./: .env.sample  LICENSE  README.md  docker-compose.yml  next.config.js  package-lock.json  package.json  tsconfig.json
app/: layout.tsx  page.tsx
app/api/: prisma.ts
app/api/graph/ingest/: route.ts
app/api/graph/last/: route.ts
app/api/graph/load/: route.ts
app/api/graph/start/: route.ts
app/api/graphs/list/: route.ts
app/graph/: page.tsx
prisma/: schema.prisma
prisma/migrations/20250118055626_init/: migration.sql
prisma/migrations/20250118091731_update_to_uuid_graph_id/: migration.sql
prisma/migrations/20250118092658_make_input_json_longtext/: migration.sql
python_sdk/: README.md  pyproject.toml
python_sdk/examples/: README.md  example_workflow.py
python_sdk/langviz_studio/: __init__.py  observability.py
python_sdk/tests/: test_observability.py
